testsuite/tests/grammar/invalid_list/invalid-list-cls.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- NoSuchGeneric[Example]+(Example("example"))
}

class Example : FooNode implements TokenNode {
}
